# poc-release-please

./: CHANGELOG.md  README.md  VERSION  commitlint.config.js  main.py  pyproject.toml  release-please-config.json
.github/workflows/: enforce-conventional-commits.yml  release-please.yml
mcu/: pyproject.toml
ui/: package-lock.json  package.json
