[project]
name = "mcu"
version = "2.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.2.1",
    "aiofiles>=24.1.0",
    "cryptography>=45.0.4",
    "dictdot>=1.5.1",
    "fastapi>=0.115.6",
    "fastapi-utils>=0.8.0",
    "fastmcp>=2.14.1",
    "httpx>=0.28.1",
    "mcp[cli]>=1.12.0",
    "motor>=3.6.0",
    "numpy>=2.2.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "psycopg>=3.2.4",
    "psycopg-binary>=3.2.4",
    "pycryptodome>=3.21.0",
    "pydantic[email]>=2.10.5",
    "pydash>=8.0.5",
    "pyjwt>=2.10.1",
    "pymongo>=4.10.1",
    "python-dateutil>=2.9.0.post0",
    "python-multipart>=0.0.20",
    "requests-oauthlib>=2.0.0",
    "typing-inspect>=0.9.0",
    "uvicorn>=0.34.0",
    "yamlcore>=0.0.4",
]
